# vercel-django

./: build_files.sh  pyproject.toml  requirements.txt  vercel.json
appBetakit/: apps.py  views.py
appBetakit/helper/: aiFunction.py  betakitFunction.py  planning.txt  wordReferencer.py
appOne/: views.py
mainApp/: asgi.py  settings.py  urls.py  wsgi.py
