[tool.poetry]
name = "vercel-django"
version = "0.1.0"
description = "Test Django vercel deployment."
authors = ["Adam Huang"]

[tool.poetry.dependencies]
python = ">=3.11.0, <=3.12.4"
django = "^5.0.6"
requests = "^2.32.2"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Python code for type errors
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"